--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.29",
+    "axios": "^1.6.0",
     "next": "^12.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "20.8.10",
