--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@types/next-auth": "^3.15.0",
+    "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.29",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
-    "next": "^12.3.4",
+    "framer-motion": "^10.16.5",
+    "next": "^14.0.2",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
     "styled-component": "^2.8.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@types/node": "20.8.10",
