--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.462.0",
+    "@aws-sdk/s3-request-presigner": "^3.462.0",
     "@nextui-org/react": "^2.2.9",
     "@types/next-auth": "^3.15.0",
     "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.29",
     "autoprefixer": "^10.4.16",
+    "aws-sdk": "^2.1509.0",
     "axios": "^1.6.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^10.16.5",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.0.2",
     "next-auth": "^4.24.5",
+    "next-s3-upload": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
@@ -30,8 +37,8 @@
     "@types/node": "20.8.10",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
-    "eslint": "8.53.0",
-    "eslint-config-next": "14.0.1",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.1",
     "typescript": "5.2.2"
   }
 }
